objects/Credit_Card__c.object
<CustomObject>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <label>Card Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <label>Expiration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01/18</fullName>
                </value>
                <value>
                    <fullName>02/18</fullName>
                </value>
                <value>
                    <fullName>03/18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Credit Card</label>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Credit Card Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>